[package]
name = "cvitek_nic_httpserver_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use_ramfs = ["axfs/myfs", "dep:axfs_vfs", "dep:axfs_ramfs", "dep:crate_interface"]

# if needs irq, add "libax/irq"
use-ramdisk = ["use_ramfs", "libax/use-ramdisk", "libax/irq"]

default = []

[dependencies]
axfs = { path = "../../../modules/axfs", optional = true }
axfs_vfs = { path = "../../../crates/axfs_vfs", optional = true }
axfs_ramfs = { path = "../../../crates/axfs_ramfs", optional = true }
crate_interface = { path = "../../../crates/crate_interface", optional = true }
libax = { path = "../../../ulib/libax", features = ["fs", "paging", "multitask", "cviteknic"] }

